--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "packages/*"
   ],
   "devDependencies": {
+    "husky": "2.7.0",
+    "lint-staged": "^8.1.5",
     "turbo": "^1.3.4"
   }
 }
