--- a/packages/agent-app-sdk/package.json
+++ b/packages/agent-app-sdk/package.json
@@ -40,7 +40,7 @@
     "@babel/preset-typescript": "^7.10.4",
     "@types/jest": "^26.0.10",
     "core-js": "^3.0.1",
-    "husky": "^2.1.0",
+    "husky": "2.7.0",
     "jest": "^26.4.1",
     "lint-staged": "^8.1.5",
     "prettier": "^1.17.0",
@@ -53,7 +53,7 @@
     "rollup-plugin-replace": "^2.1.0",
     "rollup-plugin-typescript2": "^0.21.0",
     "rollup-plugin-uglify": "^6.0.1",
-    "typescript": "^3.4.5"
+    "typescript": "3.4.5"
   },
   "prettier": {
     "singleQuote": true,
