--- a/packages/agent-app-sdk/package.json
+++ b/packages/agent-app-sdk/package.json
@@ -30,7 +30,8 @@
   "dependencies": {
     "@babel/runtime": "^7.2.0",
     "@livechat/mitt": "0.1.2",
-    "@livechat/postmessage": "^0.3.2"
+    "@livechat/postmessage": "^0.3.2",
+    "@livechat/widget-core-sdk": "1.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
