--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "turbo run build",
     "test": "turbo run test",
     "lint": "turbo run lint",
-    "dev": "turbo run dev"
+    "dev": "turbo run dev",
+    "clean": "turbo run clean && rm -rf node_modules"
   },
   "workspaces": [
     "packages/*"
