--- a/packages/widget-core-sdk/package.json
+++ b/packages/widget-core-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@livechat/widget-core-sdk",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "Products widget core library",
   "license": "MIT",
   "repository": {
@@ -21,7 +21,8 @@
     "prepublishOnly": "npm run test:ci && npm run build",
     "test": "jest",
     "test:ci": "jest --ci",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist"
   },
   "dependencies": {
     "@babel/runtime": "^7.2.0",
