--- a/turbo.json
+++ b/turbo.json
@@ -4,8 +4,7 @@
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
-      "outputs": [".dist/**"],
-      "cache": false
+      "outputs": [".dist/**"]
     },
     "test": {
       "dependsOn": ["build"],
@@ -18,6 +17,9 @@
     "deploy": {
       "dependsOn": ["build", "test", "lint"],
       "outputs": []
+    },
+    "clean": {
+      "cache": false
     }
   }
 }
