--- a/packages/agent-app-sdk/package.json
+++ b/packages/agent-app-sdk/package.json
@@ -25,12 +25,14 @@
     "prepublishOnly": "npm run test:ci && npm run build",
     "test": "jest",
     "test:ci": "jest --ci",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist"
   },
   "dependencies": {
     "@babel/runtime": "^7.2.0",
     "@livechat/mitt": "0.1.2",
-    "@livechat/postmessage": "^0.3.2"
+    "@livechat/postmessage": "^0.3.2",
+    "@livechat/widget-core-sdk": "*"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
