--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "husky": "2.7.0",
     "lint-staged": "^8.1.5",
     "turbo": "^1.3.4"
+  },
+  "dependencies": {
+    "@changesets/cli": "^2.25.2"
   }
 }
