--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -13,8 +13,8 @@ jobs:
           node-version: "15.14"
           cache: "npm"
           cache-dependency-path: package-lock.json
-      - name: Run lint script
-        run: npm run lint
+      - run: npm ci
+      - run: npm run lint
 
   build:
     runs-on: ubuntu-latest
@@ -25,8 +25,8 @@ jobs:
           node-version: "15.14"
           cache: "npm"
           cache-dependency-path: package-lock.json
-      - name: Run build script
-        run: npm run build
+      - run: npm ci
+      - run: npm run build
 
   test:
     runs-on: ubuntu-latest
@@ -37,5 +37,5 @@ jobs:
           node-version: "15.14"
           cache: "npm"
           cache-dependency-path: package-lock.json
-      - name: Run tests
-        run: npm test
+      - run: npm ci
+      - run: npm test
