--- a/packages/helpdesk-sdk/package.json
+++ b/packages/helpdesk-sdk/package.json
@@ -17,6 +17,7 @@
   "typings": "types/index.d.ts",
   "scripts": {
     "build": "rollup -c",
+    "lint": "eslint src --ext .ts --fix",
     "prebuild": "rimraf dist && rimraf types",
     "prepublishOnly": "npm run test:ci && npm run build",
     "test": "jest",
@@ -37,7 +38,10 @@
     "@babel/preset-env": "^7.1.5",
     "@babel/preset-typescript": "^7.10.4",
     "@types/jest": "26.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/parser": "^5.47.1",
     "core-js": "3.0.1",
+    "eslint": "^8.30.0",
     "husky": "2.7.0",
     "jest": "26.4.1",
     "lint-staged": "8.1.5",
@@ -45,7 +49,7 @@
     "regenerator-runtime": "0.13.2",
     "rimraf": "2.6.2",
     "rollup": "1.10.1",
-    "rollup-plugin-babel": "4.0.3",
+    "rollup-plugin-babel": "=4.3.0",
     "rollup-plugin-commonjs": "9.2.0",
     "rollup-plugin-node-resolve": "4.2.3",
     "rollup-plugin-replace": "2.1.0",
