--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "products-sdk",
   "version": "1.0.0",
-  "description": "The collection of sdk's for our products to help developers with building integrations",
+  "description": "The collection of SDKs for LiveChat products to help developers with building their integrations",
   "main": "index.js",
   "repository": "git@github.com:livechat/products-sdk.git",
-  "author": "j.sikora@livechat.com",
   "license": "MIT",
   "private": true,
   "scripts": {
@@ -12,7 +11,10 @@
     "test": "turbo run test",
     "lint": "turbo run lint",
     "dev": "turbo run dev",
-    "clean": "turbo run clean && rm -rf node_modules"
+    "clean": "turbo run clean && rm -rf node_modules",
+    "changeset": "changeset",
+    "version-packages": "changeset version",
+    "release": "turbo run build lint test && changeset publish"
   },
   "workspaces": [
     "packages/*"
