--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "clean": "turbo run clean && rm -rf node_modules",
     "changeset": "changeset",
     "version-packages": "changeset version",
-    "release": "turbo run build lint test && changeset publish"
+    "release": "turbo run build lint test"
   },
   "workspaces": [
     "packages/*"
