--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "repository": "git@github.com:livechat/products-sdk.git",
   "license": "MIT",
-  "private": true,
   "scripts": {
     "build": "turbo run build",
     "test": "turbo run test",
@@ -14,7 +13,7 @@
     "clean": "turbo run clean && rm -rf node_modules",
     "changeset": "changeset",
     "version-packages": "changeset version",
-    "release": "turbo run build lint test"
+    "release": "turbo run build lint test && changeset publish"
   },
   "workspaces": [
     "packages/*"
