--- a/packages/helpdesk-sdk/package.json
+++ b/packages/helpdesk-sdk/package.json
@@ -19,10 +19,7 @@
     "build": "rollup -c",
     "lint": "eslint src --ext .ts --fix",
     "prebuild": "rimraf dist && rimraf types",
-    "prepublishOnly": "npm run test:ci && npm run build",
     "test": "jest",
-    "test:ci": "jest --ci",
-    "test:watch": "jest --watch",
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist"
   },
   "dependencies": {
@@ -75,5 +72,8 @@
       "prettier --write",
       "git add"
     ]
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
