navigate & setReportsFilters for livechat fullscreen apps

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "version-packages": "changeset version",
     "release": "turbo run build lint test && changeset publish"
   },
+  "private": true,
   "workspaces": [
     "packages/*"
   ],
