--- a/packages/helpdesk-sdk/package.json
+++ b/packages/helpdesk-sdk/package.json
@@ -40,18 +40,18 @@
     "core-js": "3.0.1",
     "eslint": "^8.30.0",
     "husky": "2.7.0",
-    "jest": "26.4.1",
+    "jest": "^30.1.3",
     "lint-staged": "^15.2.2",
     "prettier": "1.17.0",
     "regenerator-runtime": "0.13.2",
     "rimraf": "2.6.2",
-    "rollup": "1.10.1",
-    "rollup-plugin-babel": "=4.3.0",
+    "rollup": "^4.50.1",
+    "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "9.2.0",
     "rollup-plugin-node-resolve": "4.2.3",
     "rollup-plugin-replace": "2.1.0",
-    "rollup-plugin-typescript2": "0.21.0",
-    "rollup-plugin-uglify": "6.0.1",
+    "rollup-plugin-typescript2": "^0.36.0",
+    "rollup-plugin-uglify": "^4.0.0",
     "typescript": "3.4.5"
   },
   "prettier": {
