--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v5
       - uses: actions/setup-node@v5
         with:
-          node-version: ".nvmrc"
+          node-version: "22.19.0"
           cache: "npm"
           cache-dependency-path: package-lock.json
       - run: npm ci
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/checkout@v5
       - uses: actions/setup-node@v5
         with:
-          node-version: ".nvmrc"
+          node-version: "22.19.0"
           cache: "npm"
           cache-dependency-path: package-lock.json
       - run: npm ci
@@ -34,7 +34,7 @@ jobs:
       - uses: actions/checkout@v5
       - uses: actions/setup-node@v5
         with:
-          node-version: ".nvmrc"
+          node-version: "22.19.0"
           cache: "npm"
           cache-dependency-path: package-lock.json
       - run: npm ci
