--- a/packages/widget-core-sdk/package.json
+++ b/packages/widget-core-sdk/package.json
@@ -3,6 +3,7 @@
   "version": "1.2.1",
   "description": "Products widget core library",
   "license": "MIT",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/livechat/products-sdk.git"
@@ -33,6 +34,7 @@
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.1.5",
     "@babel/preset-typescript": "^7.10.4",
+    "@rollup/plugin-terser": "^0.4.4",
     "@types/jest": "26.0.10",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
@@ -50,7 +52,6 @@
     "rollup-plugin-node-resolve": "4.2.3",
     "rollup-plugin-replace": "2.1.0",
     "rollup-plugin-typescript2": "^0.36.0",
-    "rollup-plugin-uglify": "^4.0.0",
     "typescript": "3.4.5"
   },
   "prettier": {
